implement add member to the project and refactor